--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.4",
     "muse-ui": "^2.1.0",
     "node-sass": "^4.5.3",
+    "normalize.css": "^7.0.0",
     "v-tap": "^3.0.2",
     "vue": "^2.4.4",
     "vue-router": "^2.7.0",
